# effective-cpp

./: .gitignore  Makefile  README.md  Widget.cpp  Widget.h  main.cpp
project/src/: CMakeLists.txt
project/test/: CMakeLists.txt
src/core/: DBTransaction.cpp  DBTransaction.h  SharedPtr.cpp  SharedPtr.h  TextBlock.h  Transaction.cpp  Transaction.h  VerboseSharedPtr.h  Widget.cpp  Widget.h  WidgetImpl.cpp  WidgetImpl.h  main.cpp
